Fix overlaping quotations

--- a/backend/web/landing-page/custom.css
+++ b/backend/web/landing-page/custom.css
@@ -48,3 +48,8 @@
 .sct-color-2 {
     background-color: #f3f0f0;
 }
+
+
+ .margin-left{
+     margin-left: 20px !important;
+ }
